fixed some white space

--- a/src/App.css
+++ b/src/App.css
@@ -182,8 +182,7 @@ h3 {
      
   }
   #established {
-      margin-top: 15%;
-      margin-left: 5%;
+      
       padding: 2%;
   }
   #welcome-header {
